--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,10 +4,10 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-        {% if ban %}
-        <H1>State: {{ vals.name }}</H1>
+        {% if ban == True %}
+        <H1>State: {{ name_st.name }}</H1>
         <H3>Cities:</H3>
-        <UL>    {% for c in vals.cities|sort(attribute="name") %}
+        <UL>    {% for c in name_st.cities|sort(attribute="name") %}
                 <LI>
                     City: {{ c.id }}: <B>{{ c.name }}</B>
                 </LI>
