--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -9,7 +9,7 @@
         <H3>Cities:</H3>
         <UL>    {% for c in name_st.cities|sort(attribute="name") %}
                 <LI>
-                    City: {{ c.id }}: <B>{{ c.name }}</B>
+                    {{ c.id }}: <B>{{ c.name }}</B>
                 </LI>
                 {% endfor %}      
         </UL>
