--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -7,11 +7,9 @@
         {% if ban == True %}
         <H1>State: {{ name_st.name }}</H1>
         <H3>Cities:</H3>
-        <UL>    {% for c in name_st.cities|sort(attribute="name") %}
-                <LI>
-                    {{ c.id }}: <B>{{ c.name }}</B>
-                </LI>
-                {% endfor %}      
+        <UL>{% for c in name_st.cities|sort(attribute="name") %}
+                <LI>{{ c.id }}: <B>{{ c.name }}</B></LI>
+            {% endfor %}      
         </UL>
         {% else %}
         <H1>Not found!</H1>
