--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -7,7 +7,8 @@
         {% if ban == True %}
         <H1>State: {{ name_st.name }}</H1>
         <H3>Cities:</H3>
-        <UL>{% for c in name_st.cities|sort(attribute="name") %}
+        <UL>
+            {% for c in name_st.cities|sort(attribute="name") %}
                 <LI>{{ c.id }}: <B>{{ c.name }}</B></LI>
             {% endfor %}      
         </UL>
