--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -8,8 +8,8 @@
         <H1>State: {{ name_st.name }}</H1>
         <H3>Cities:</H3>
         <UL>
-            {% for c in name_st.cities|sort(attribute="name") %}
-                <LI>{{ c.id }}: <B>{{ c.name }}</B></LI>
+            {% for city in name_st.cities|sort(attribute="name") %}
+                <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
             {% endfor %}      
         </UL>
         {% else %}
