--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,7 +4,7 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-        {% if ban == True %}
+        {% if ban %}
         <H1>State: {{ name_st.name }}</H1>
         <H3>Cities:</H3>
         <UL>
