--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -27,13 +27,14 @@
 h3 {
     font-weight: 600;
     margin-bottom: 5px;
+    padding-top: 10px;
 }
 
 h4 {
     margin-top: 0px;
     font-weight: 400;
     font-size: 14px;
-    margin-bottom: 14px;
+    margin-bottom: 4px;
 }
 
 .locations {
@@ -59,26 +60,30 @@ h4 {
     position: absolute;
     background-color: #FAFAFA;
     width: 86%;
-    padding: 12px 16px;
     list-style: none;
     border: #DDDDDD 1px solid;
     border-radius: 4px;
     padding: 30px;
     margin-bottom:0px;
     margin-top: 0px;
+    overflow-y: scroll;
+    height: 300px;
 }
 
 .popover li {
     list-style: none;
+    margin-top: 10px;
 }
 
 .popover h2 {
-    font-size: 16px;
+    font-size: 20px;
+    padding-left: 15px;
 }
-  
+
 .locations:hover .popover {
     display: block;
     margin-left: -30px;
+    overflow: scroll;
 }
 
 .amenities:hover .popover {
